Added RTIMUBERRYIMU.cpp to library source

--- a/RTIMULib/CMakeLists.txt
+++ b/RTIMULib/CMakeLists.txt
@@ -72,6 +72,7 @@ SET(LIBRTIMU_SRCS
     IMUDrivers/RTHumidityHTS221.cpp
     IMUDrivers/RTHumidityHTU21D.cpp
     IMUDrivers/RTIMUHMC5883LADXL345.cpp
+    IMUDrivers/RTIMUBERRYIMU.cpp
 )
 
 IF(WIN32 AND QT5)
